# BTFGStatus

./: CMakeLists.txt  btfg_config_observable.cpp  btfg_config_observable.h  btfg_config_observer.h  btfg_controller.cpp  btfg_controller.h  btfg_proto.cpp  btfg_proto.h  btfg_status_label.cpp  btfg_status_label.h  btfg_textbutton.cpp  btfg_textbutton.h  build.sh  config_observable.cpp  config_observable.h  config_observer.h  config_window_factory.cxx  config_window_factory.fl  config_window_factory.h  configwindow  configwindow.h  main.cpp  status_window.cpp  status_window.h
